--- a/registo.css
+++ b/registo.css
@@ -69,7 +69,7 @@ button:hover {
 p {
     font-size: 12px;
     color: #d9534f; /* Vermelho para erro */
-    margin-top: -10px; /* Espaçamento negativo para ajustar posição */
-    margin-bottom: 15px; /* Espaço após a mensagem */
+    margin-top: -10px;
+    margin-bottom: 15px;
     text-align: left;
 }
